2017-04-12  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	Backport from mainline
	2017-04-11  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/80376
	PR target/80315
	* config/rs6000/rs6000.c (rs6000_expand_unop_builtin): Return
	CONST0_RTX (mode) rather than const0_rtx where appropriate.
	(rs6000_expand_binop_builtin): Likewise.
	(rs6000_expand_ternop_builtin): Likewise; also add missing
	vsx_xxpermdi_* variants; also fix typo (arg1 => arg2) for
	vshasigma built-ins.
	* doc/extend.texi: Document that vec_xxpermdi's third argument
	must be a constant.

2017-04-11  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	Backport from GCC 6
	2017-04-06  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR target/80082
	* config/arm/arm-protos.h (FL_LPAE): Define macro.
	(FL_FOR_ARCH7VE): Add FL_LPAE.
	(arm_arch_lpae): Declare extern.
	* config/arm/arm.c (arm_arch_lpae): Declare.
	(arm_option_override): Define arm_arch_lpae.
	* config/arm/arm.h (TARGET_HAVE_LPAE): Redefine in term of
	arm_arch_lpae.

2017-04-11  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2017-03-30  Martin Jambor  <mjambor@suse.cz>

        PR ipa/77333
        * cgraph.h (cgraph_build_function_type_skip_args): Declare.
        * cgraph.c (redirect_call_stmt_to_callee): Set gimple fntype so that
        it reflects the signature changes performed at the callee side.
        * cgraphclones.c (build_function_type_skip_args): Make public, renamed
        to cgraph_build_function_type_skip_args.
        (build_function_decl_skip_args): Adjust call to the above function.

2017-04-11  Bin Cheng  <bin.cheng@arm.com>

	Backport from mainline
	2016-02-10  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/68021
	* tree-ssa-loop-ivopts.c (get_computation_aff): Set ratio to 1 if
	when computing the value of biv cand by itself.

2017-04-08  Andreas Tobler  <andreast@gcc.gnu.org>

	Backport from mainline
	2017-04-08  Andreas Tobler  <andreast@gcc.gnu.org>
