@@ -1,3 +1,12 @@
+2017-04-21  Christophe Lyon  <christophe.lyon@linaro.org>
+
+	Backport from mainline
+	+2015-11-23  Kugan Vivekanandarajah  <kuganv@linaro.org>
+
+	PR target/68390
+	* config/arm/arm.c (arm_function_ok_for_sibcall): Get function type
+	for indirect function call.
+
 2017-04-12  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	Backport from mainline
